# ftxusderivatives-python

./: .gitignore  LICENSE  README.md  pyproject.toml
rest/: rest.py
rest_lx/: rest.py
src/rest_lx/: rest.py
src/websocket_lx/: client.py
tests/: test_rest_api.py
websocket/: client.py  websocket_manager.py
websocket_lx/: client.py  websocket_manager.py
websockettt/: client.py
