[tool.poetry]
name = "ftxusderivatives-python"
version = "0.1.2"
description = "An unofficial Python wrapper for the REST and WebSocket APIs of FTX US Derivatives, formerly known as LedgerX."
authors = ["Nenye Ndili <nenye@ndili.net>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/nenyehub/ftxusderivatives-python"
repository = "https://github.com/nenyehub/ftxusderivatives-python"
keywords = ["FTX", "trading", "crypto"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

packages = [
    { include = "rest_lx", from = "src" },
    { include = "websocket_lx", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
websocket-client = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
